# 90plus-smart-contract

./: Anchor.toml  README.md  package.json  run-deployed-tests.sh  switch-network.sh  update-anchor.sh  update-program-ids-simple.sh  update-program-ids.sh
client/: tsconfig.json
client/src/: betting-client.ts  betting.json  example-usage.ts  index.ts  token-granting-client.ts  token_granting.json
programs/betting/: Cargo.toml
programs/betting/src/: lib.rs
programs/token-granting/: Cargo.toml
programs/token-granting/src/: lib.rs
programs/token-granting/src/instructions/: mint.rs
tests/: betting.ts  deployed-test.ts
